[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/new_levels/NewLevelTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/polish/BackgroundColumn.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/gate.png" type="Texture" id=3]
[ext_resource path="res://scenes/mechanics/MovingPlatform.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/mechanics/Gem.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/mechanics/Coin.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/new_levels/Level0.4.gd" type="Script" id=7]
[ext_resource path="res://scenes/mechanics/LevelLoadZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/banner1.png" type="Texture" id=9]
[ext_resource path="res://scenes/mechanics/Enemy/Birdy.tscn" type="PackedScene" id=10]
[ext_resource path="res://sfx/Retro FootStep Metal 01.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 12 )

[node name="Level" instance=ExtResource( 1 )]
script = ExtResource( 7 )

[node name="Camera2D" parent="." index="0"]
limit_top = -376

[node name="TileMap" parent="." index="2"]
tile_data = PoolIntArray( -1966078, 22, 0, -1966077, 20, 0, -1966076, 20, 0, -1966075, 20, 0, -1966074, 20, 0, -1966073, 20, 0, -1966072, 20, 0, -1966071, 20, 0, -1966070, 20, 0, -1966069, 20, 0, -1966068, 20, 0, -1966067, 20, 0, -1966066, 20, 0, -1966065, 20, 0, -1966064, 20, 0, -1966063, 20, 0, -1966062, 20, 0, -1966061, 20, 0, -1966060, 20, 0, -1966059, 23, 0, -1900542, 18, 0, -1900523, 16, 0, -1835006, 18, 0, -1835004, 17, 0, -1834987, 16, 0, -1769470, 18, 0, -1769451, 16, 0, -1703934, 18, 0, -1703930, 27, 0, -1703919, 27, 0, -1703915, 16, 0, -1638398, 18, 0, -1638394, 28, 0, -1638383, 28, 0, -1638379, 16, 0, -1572862, 18, 0, -1572843, 16, 0, -1507326, 18, 0, -1507307, 16, 0, -1441790, 18, 0, -1441786, 13, 0, -1441785, 14, 0, -1441784, 14, 0, -1441783, 14, 0, -1441782, 14, 0, -1441781, 14, 0, -1441780, 14, 0, -1441779, 14, 0, -1441778, 14, 0, -1441777, 14, 0, -1441776, 14, 0, -1441775, 14, 0, -1441774, 14, 0, -1441773, 14, 0, -1441772, 14, 0, -1441771, 25, 0, -1376254, 18, 0, -1376250, 19, 0, -1376249, 20, 0, -1376248, 20, 0, -1376247, 20, 0, -1376246, 20, 0, -1376245, 20, 0, -1376244, 20, 0, -1376243, 20, 0, -1376242, 20, 0, -1376241, 20, 0, -1376240, 20, 0, -1376239, 20, 0, -1376238, 20, 0, -1376237, 20, 0, -1376236, 20, 0, -1376235, 23, 0, -1310718, 18, 0, -1310709, 34, 0, -1310707, 34, 0, -1310699, 16, 0, -1245182, 18, 0, -1245173, 34, 0, -1245171, 34, 0, -1245163, 16, 0, -1179646, 18, 0, -1179637, 34, 0, -1179635, 34, 0, -1179627, 16, 0, -1114110, 18, 0, -1114101, 26, 0, -1114100, 26, 0, -1114099, 26, 0, -1114094, 17, 0, -1114091, 16, 0, -1048574, 18, 0, -1048555, 16, 0, -983038, 18, 0, -983019, 16, 0, -917502, 18, 0, -917483, 16, 0, -851966, 18, 0, -851947, 16, 0, -786430, 18, 0, -786421, 17, 0, -786411, 16, 0, -720894, 18, 0, -720875, 16, 0, -655358, 18, 0, -655356, 26, 0, -655339, 16, 0, -589822, 18, 0, -589817, 27, 0, -589808, 27, 0, -589803, 16, 0, -524286, 18, 0, -524281, 28, 0, -524272, 28, 0, -524267, 16, 0, -458750, 18, 0, -458747, 13, 0, -458746, 15, 0, -458731, 16, 0, -393214, 18, 0, -393211, 16, 0, -393210, 18, 0, -393195, 16, 0, -327678, 18, 0, -327675, 16, 0, -327674, 24, 0, -327673, 14, 0, -327672, 14, 0, -327671, 14, 0, -327670, 14, 0, -327669, 14, 0, -327668, 14, 0, -327667, 14, 0, -327666, 14, 0, -327665, 14, 0, -327664, 14, 0, -327663, 14, 0, -327662, 15, 0, -327659, 16, 0, -262142, 18, 0, -262139, 19, 0, -262138, 20, 0, -262137, 20, 0, -262136, 20, 0, -262135, 20, 0, -262134, 20, 0, -262133, 20, 0, -262132, 20, 0, -262131, 20, 0, -262130, 20, 0, -262129, 20, 0, -262128, 20, 0, -262127, 20, 0, -262126, 21, 0, -262123, 16, 0, -196606, 18, 0, -196603, 34, 0, -196587, 16, 0, -131070, 18, 0, -131067, 34, 0, -131051, 16, 0, -65534, 18, 0, -65531, 34, 0, -65515, 16, 0, 2, 18, 0, 5, 34, 0, 21, 16, 0, 65538, 18, 0, 65539, 26, 0, 65540, 26, 0, 65541, 26, 0, 65543, 27, 0, 65552, 27, 0, 65557, 16, 0, 131074, 18, 0, 131079, 28, 0, 131088, 28, 0, 131093, 16, 0, 196610, 18, 0, 196629, 16, 0, 262146, 18, 0, 262148, 17, 0, 262165, 16, 0, 327682, 18, 0, 327701, 16, 0, 393218, 18, 0, 393237, 16, 0, 458754, 18, 0, 458755, 26, 0, 458756, 26, 0, 458757, 26, 0, 458770, 26, 0, 458771, 26, 0, 458772, 26, 0, 458773, 16, 0, 524290, 18, 0, 524309, 16, 0, 524310, 22, 0, 524311, 20, 0, 524312, 23, 0, 589826, 18, 0, 589845, 16, 0, 589846, 18, 0, 589847, 34, 0, 589848, 16, 0, 655362, 18, 0, 655381, 16, 0, 655382, 18, 0, 655383, 34, 0, 655384, 16, 0, 720898, 18, 0, 720917, 16, 0, 720918, 18, 0, 720919, 34, 0, 720920, 16, 0, 786432, 20, 0, 786433, 20, 0, 786434, 21, 0, 786450, 17, 0, 786453, 19, 0, 786454, 21, 0, 786455, 34, 0, 786456, 19, 0, 786457, 20, 0, 917503, 18, 0, 851968, 37, 0, 851969, 27, 0, 851970, 37, 0, 851989, 37, 0, 851990, 37, 0, 851991, 37, 0, 851992, 37, 0, 851993, 37, 0, 851994, 16, 0, 983039, 18, 0, 917504, 37, 0, 917505, 28, 0, 917506, 37, 0, 917525, 37, 0, 917526, 37, 0, 917527, 37, 0, 917528, 37, 0, 917529, 37, 0, 917530, 16, 0, 983040, 14, 0, 983041, 14, 0, 983042, 14, 0, 983043, 14, 0, 983044, 14, 0, 983045, 14, 0, 983046, 14, 0, 983047, 14, 0, 983048, 14, 0, 983049, 14, 0, 983050, 14, 0, 983051, 14, 0, 983052, 14, 0, 983053, 14, 0, 983054, 14, 0, 983055, 14, 0, 983056, 14, 0, 983057, 14, 0, 983058, 14, 0, 983059, 14, 0, 983060, 14, 0, 983061, 14, 0, 983062, 14, 0, 983063, 14, 0, 983064, 14, 0, 983065, 14, 0 )

[node name="Background" type="Node2D" parent="." index="5"]

[node name="BackgroundColumn" parent="Background" index="0" instance=ExtResource( 2 )]
position = Vector2( 36, 96 )

[node name="BackgroundDetails-column" parent="Background/BackgroundColumn" index="1"]
position = Vector2( 0, 48 )
scale = Vector2( 1, 7 )

[node name="BackgroundDetails-top" parent="Background/BackgroundColumn" index="2"]
position = Vector2( 54, 0 )
scale = Vector2( 3.5, 1 )

[node name="BackgroundColumn3" parent="Background" index="1" instance=ExtResource( 2 )]
position = Vector2( 144, 96 )

[node name="BackgroundDetails-column" parent="Background/BackgroundColumn3" index="1"]
position = Vector2( 0, 48 )
scale = Vector2( 1, 7 )

[node name="BackgroundDetails-top" parent="Background/BackgroundColumn3" index="2"]
position = Vector2( 54, 0 )
scale = Vector2( 3.5, 1 )

[node name="BackgroundColumn5" parent="Background" index="2" instance=ExtResource( 2 )]
position = Vector2( 252, 96 )

[node name="BackgroundDetails-column" parent="Background/BackgroundColumn5" index="1"]
position = Vector2( 0, 48 )
scale = Vector2( 1, 7 )

[node name="BackgroundDetails-top" parent="Background/BackgroundColumn5" index="2"]
visible = false

[node name="BackgroundColumn2" parent="Background" index="3" instance=ExtResource( 2 )]
position = Vector2( 36, 0 )

[node name="BackgroundDetails-column" parent="Background/BackgroundColumn2" index="1"]
position = Vector2( 0, 48 )
scale = Vector2( 1, 7 )

[node name="BackgroundDetails-top" parent="Background/BackgroundColumn2" index="2"]
position = Vector2( 54, 0 )
scale = Vector2( 3.5, 1 )

[node name="BackgroundColumn4" parent="Background" index="4" instance=ExtResource( 2 )]
position = Vector2( 144, 0 )

[node name="BackgroundDetails-column" parent="Background/BackgroundColumn4" index="1"]
position = Vector2( 0, 48 )
scale = Vector2( 1, 7 )

[node name="BackgroundDetails-top" parent="Background/BackgroundColumn4" index="2"]
position = Vector2( 54, 0 )
scale = Vector2( 3.5, 1 )

[node name="BackgroundColumn6" parent="Background" index="5" instance=ExtResource( 2 )]
position = Vector2( 252, 0 )

[node name="BackgroundDetails-column" parent="Background/BackgroundColumn6" index="1"]
position = Vector2( 0, 48 )
scale = Vector2( 1, 7 )

[node name="BackgroundDetails-top" parent="Background/BackgroundColumn6" index="2"]
visible = false

[node name="Banner1" type="Sprite" parent="Background" index="6"]
position = Vector2( 108, 144 )
z_index = -299
texture = ExtResource( 9 )

[node name="Banner2" type="Sprite" parent="Background" index="7"]
position = Vector2( 150, -296 )
z_index = -299
texture = ExtResource( 9 )

[node name="Banner3" type="Sprite" parent="Background" index="8"]
position = Vector2( 192, 144 )
z_index = -299
texture = ExtResource( 9 )

[node name="Gate" type="Node2D" parent="." index="6"]
position = Vector2( 0, 24 )

[node name="Gate" type="Sprite" parent="Gate" index="0"]
position = Vector2( 282, 150 )
texture = ExtResource( 3 )

[node name="Gate2" type="Sprite" parent="Gate" index="1"]
position = Vector2( 282, 138 )
texture = ExtResource( 3 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Gate" index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gate/KinematicBody2D" index="0"]
position = Vector2( 282, 144 )
shape = SubResource( 1 )

[node name="MovingPlatform" type="Node2D" parent="." index="7"]

[node name="MovingPlatform7" parent="MovingPlatform" index="0" instance=ExtResource( 4 )]
position = Vector2( 84, 156 )
speed = 15

[node name="Platform" parent="MovingPlatform/MovingPlatform7" index="0"]
position = Vector2( 0, -48 )

[node name="End" parent="MovingPlatform/MovingPlatform7" index="2"]
position = Vector2( 0, -48 )

[node name="MovingPlatform4" parent="MovingPlatform" index="1" instance=ExtResource( 4 )]
position = Vector2( 120, 84 )

[node name="End" parent="MovingPlatform/MovingPlatform4" index="2"]
position = Vector2( 0, -36 )

[node name="MovingPlatform6" parent="MovingPlatform" index="2" instance=ExtResource( 4 )]
position = Vector2( 228, 59 )

[node name="End" parent="MovingPlatform/MovingPlatform6" index="2"]
position = Vector2( 0, -47 )

[node name="MovingPlatform5" parent="MovingPlatform" index="3" instance=ExtResource( 4 )]
position = Vector2( 240, 12 )

[node name="End" parent="MovingPlatform/MovingPlatform5" index="2"]
position = Vector2( 0, -72 )

[node name="MovingPlatform11" parent="MovingPlatform" index="4" instance=ExtResource( 4 )]
position = Vector2( 48, -180 )
speed = 15

[node name="End" parent="MovingPlatform/MovingPlatform11" index="2"]
position = Vector2( 0, -72 )

[node name="MovingPlatform13" parent="MovingPlatform" index="5" instance=ExtResource( 4 )]
position = Vector2( 84, -168 )

[node name="End" parent="MovingPlatform/MovingPlatform13" index="2"]
position = Vector2( 0, -36 )

[node name="MovingPlatform9" parent="MovingPlatform" index="6" instance=ExtResource( 4 )]
position = Vector2( 36, -144 )
speed = 10

[node name="End" parent="MovingPlatform/MovingPlatform9" index="2"]
position = Vector2( 60, 0 )

[node name="MovingPlatform14" parent="MovingPlatform" index="7" instance=ExtResource( 4 )]
position = Vector2( 108, 12 )
speed = 10

[node name="End" parent="MovingPlatform/MovingPlatform14" index="2"]
position = Vector2( 48, 0 )

[node name="Gem" parent="." index="8" instance=ExtResource( 5 )]
position = Vector2( 36, -24 )

[node name="Gem2" parent="." index="9" instance=ExtResource( 5 )]
position = Vector2( 144, -216 )

[node name="Coins" type="Node2D" parent="." index="10"]

[node name="Coin" parent="Coins" index="0" instance=ExtResource( 6 )]
position = Vector2( 216, 72 )

[node name="Coin2" parent="Coins" index="1" instance=ExtResource( 6 )]
position = Vector2( 228, -12 )

[node name="Coin3" parent="Coins" index="2" instance=ExtResource( 6 )]
position = Vector2( 240, -72 )

[node name="Coin4" parent="Coins" index="3" instance=ExtResource( 6 )]
position = Vector2( 132, -72 )

[node name="Coin5" parent="Coins" index="4" instance=ExtResource( 6 )]
position = Vector2( 36, -156 )

[node name="Coin6" parent="Coins" index="5" instance=ExtResource( 6 )]
position = Vector2( 84, -240 )

[node name="Coin7" parent="Coins" index="6" instance=ExtResource( 6 )]
position = Vector2( 228, -276 )

[node name="OpenGateTimer" type="Timer" parent="." index="11"]
one_shot = true

[node name="EnablePlayerTimer" type="Timer" parent="." index="12"]
wait_time = 1.5
one_shot = true

[node name="LevelLoadZone" parent="." index="13" instance=ExtResource( 8 )]
position = Vector2( 308, 167 )

[node name="Hazards" type="Node2D" parent="." index="14"]

[node name="Birdy2" parent="Hazards" index="0" instance=ExtResource( 10 )]
position = Vector2( 144, 96 )

[node name="EndPoint" parent="Hazards/Birdy2" index="1"]
position = Vector2( 0, -60 )

[node name="AnimatedSprite" parent="Hazards/Birdy2/KinematicBody2D" index="0"]
frame = 1

[node name="Birdy3" parent="Hazards" index="1" instance=ExtResource( 10 )]
position = Vector2( 96, -68 )

[node name="EndPoint" parent="Hazards/Birdy3" index="1"]
position = Vector2( 48, 0 )

[node name="AnimatedSprite" parent="Hazards/Birdy3/KinematicBody2D" index="0"]
frame = 1

[node name="Birdy6" parent="Hazards" index="2" instance=ExtResource( 10 )]
position = Vector2( 127, -271 )

[node name="EndPoint" parent="Hazards/Birdy6" index="1"]
position = Vector2( 0, -70 )

[node name="Birdy7" parent="Hazards" index="3" instance=ExtResource( 10 )]
position = Vector2( 102, -341 )

[node name="EndPoint" parent="Hazards/Birdy7" index="1"]
position = Vector2( 0, 71 )

[node name="AnimatedSprite" parent="Hazards/Birdy7/KinematicBody2D" index="0"]
frame = 2

[node name="GateSFX" type="AudioStreamPlayer2D" parent="." index="15"]
stream = ExtResource( 11 )

[editable path="KillZone"]
[editable path="Background/BackgroundColumn"]
[editable path="Background/BackgroundColumn3"]
[editable path="Background/BackgroundColumn5"]
[editable path="Background/BackgroundColumn2"]
[editable path="Background/BackgroundColumn4"]
[editable path="Background/BackgroundColumn6"]
[editable path="MovingPlatform/MovingPlatform7"]
[editable path="MovingPlatform/MovingPlatform4"]
[editable path="MovingPlatform/MovingPlatform6"]
[editable path="MovingPlatform/MovingPlatform5"]
[editable path="MovingPlatform/MovingPlatform11"]
[editable path="MovingPlatform/MovingPlatform13"]
[editable path="MovingPlatform/MovingPlatform9"]
[editable path="MovingPlatform/MovingPlatform14"]
[editable path="Hazards/Birdy2"]
[editable path="Hazards/Birdy2/KinematicBody2D/KillZone"]
[editable path="Hazards/Birdy3"]
[editable path="Hazards/Birdy3/KinematicBody2D/KillZone"]
[editable path="Hazards/Birdy6"]
[editable path="Hazards/Birdy6/KinematicBody2D/KillZone"]
[editable path="Hazards/Birdy7"]
[editable path="Hazards/Birdy7/KinematicBody2D/KillZone"]
